outputs_20260328-212505-894b4386/codegen/production/build_logs/compiler_stderr.log
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_88279qmn\src\egtm_atom_3_phase_inverter_pwm.c: In function 'initEgtmAtom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_88279qmn\src\egtm_atom_3_phase_inverter_pwm.c:104:39: error: 'Ifx_ActiveState_high' undeclared (first use in this function); did you mean 'Ifx_ActiveState'?
  104 |     output[0].polarity              = Ifx_ActiveState_high;   /* HS active high */
      |                                       ^~~~~~~~~~~~~~~~~~~~
      |                                       Ifx_ActiveState
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_88279qmn\src\egtm_atom_3_phase_inverter_pwm.c:104:39: note: each undeclared identifier is reported only once for each function it appears in
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_88279qmn\src\egtm_atom_3_phase_inverter_pwm.c:105:39: error: 'Ifx_ActiveState_low' undeclared (first use in this function); did you mean 'Ifx_ActiveState'?
  105 |     output[0].complementaryPolarity = Ifx_ActiveState_low;    /* LS active low  */
      |                                       ^~~~~~~~~~~~~~~~~~~
      |                                       Ifx_ActiveState

C:\Users\extsiyv\AppData\Local\Temp\tdd_build_88279qmn\test\test_egtm_atom_3_phase_inverter_pwm.c: In function 'test_TC_G6_002_after_wrap_post_step_value_equals_step_for_each_phase':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_88279qmn\test\test_egtm_atom_3_phase_inverter_pwm.c:297:5: error: unknown type name 'bool'
  297 |     bool wrappedSeen[3] = { false, false, false };
      |     ^~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_88279qmn\test\test_egtm_atom_3_phase_inverter_pwm.c:4:1: note: 'bool' is defined in header '<stdbool.h>'; this is probably fixable by adding '#include <stdbool.h>'
    3 | #include "egtm_atom_3_phase_inverter_pwm.h"
  +++ |+#include <stdbool.h>
    4 | 
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_88279qmn\test\test_egtm_atom_3_phase_inverter_pwm.c:297:29: error: 'false' undeclared (first use in this function)
  297 |     bool wrappedSeen[3] = { false, false, false };
      |                             ^~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_88279qmn\test\test_egtm_atom_3_phase_inverter_pwm.c:297:29: note: 'false' is defined in header '<stdbool.h>'; this is probably fixable by adding '#include <stdbool.h>'
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_88279qmn\test\test_egtm_atom_3_phase_inverter_pwm.c:297:29: note: each undeclared identifier is reported only once for each function it appears in
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_88279qmn\test\test_egtm_atom_3_phase_inverter_pwm.c:314:34: error: 'true' undeclared (first use in this function)
  314 |                 wrappedSeen[i] = true;
      |                                  ^~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_88279qmn\test\test_egtm_atom_3_phase_inverter_pwm.c:314:34: note: 'true' is defined in header '<stdbool.h>'; this is probably fixable by adding '#include <stdbool.h>'
